# TemplateZoo

./: .gitignore  README.md
templates/000_base_template/: .env.sample  README.md  init.sh  nextStep.md  pyproject.toml
templates/000_base_template/certs/: README.md
templates/000_base_template/data/db/chat/: chat_history.sqlite  chat_history.sqlite-shm  chat_history.sqlite-wal
templates/000_base_template/docs/: README.md
templates/000_base_template/docs/chat/: README.md
templates/000_base_template/docs/intergrations/client/: README.md
templates/000_base_template/docs/intergrations/db/: README.md  SETUP.md
templates/000_base_template/docs/shared/config/: README.md
templates/000_base_template/docs/shared/const/: README.md
templates/000_base_template/docs/shared/exceptions/: README.md
templates/000_base_template/docs/shared/logging/: README.md
templates/000_base_template/docs/shared/runtime/: README.md
templates/000_base_template/docs/static/: README.md
templates/000_base_template/src/base_template/: __init__.py
templates/000_base_template/src/base_template/api/: main.py
templates/000_base_template/src/base_template/core/: __init__.py
templates/000_base_template/src/base_template/integrations/: __init__.py
templates/000_base_template/tests/: conftest.py
templates/000_base_template/tests/e2e/: conftest.py  test_chat_api_server_e2e.py
templates/002_rag_chatbot/: .env.sample  README.md  check_db.py  nextStep.md  pyproject.toml  quick-test.py  sqlite.py  t.py
templates/002_rag_chatbot/docs/: README.md
templates/002_rag_chatbot/docs/api/: chat.md  health.md  overview.md  ui.md
templates/002_rag_chatbot/docs/core/: chat.md  overview.md
templates/002_rag_chatbot/docs/integrations/: db.md  embedding.md  fs.md  llm.md  overview.md
templates/002_rag_chatbot/docs/setup/: env.md  filesystem.md  ingestion.md  lancedb.md  mongodb.md  overview.md  postgresql_pgvector.md  sqlite_vec.md
templates/002_rag_chatbot/docs/shared/: chat.md  config.md  const.md  exceptions.md  logging.md  overview.md  runtime.md
templates/002_rag_chatbot/docs/static/: ui.md
templates/002_rag_chatbot/ingestion/: __init__.py  ingest.py  ingest_elasticsearch.py  ingest_lancedb.py  ingest_postgres.py  ingest_sqlite_vec.py
templates/002_rag_chatbot/ingestion/core/: __init__.py  chunking.py  db.py  documents.py  docx_layout.py  enrichment.py  file_parser.py  image_annotation.py  pdf_assets.py  pdf_page_capture.py  pdf_tables.py  runner.py  table_annotation.py  types.py
templates/002_rag_chatbot/ingestion/steps/: __init__.py  chunk_step.py  embedding_step.py  upsert_elasticsearch_step.py  upsert_lancedb_step.py  upsert_postgres_step.py  upsert_sqlite_vec_step.py
templates/002_rag_chatbot/src/rag_chatbot/: __init__.py
templates/002_rag_chatbot/tests/: conftest.py
templates/002_rag_chatbot/tests/e2e/: _chat_api_e2e_support.py  test_chat_api_server_e2e.py
(+3547 files in other folders)
