[project]
name = "base-template"
version = "0.1.0"
description = "Base Template for Assetization"
readme = "README.md"
authors = [
    { name = "lgcns-ai-keonho-kim", email = "kkh93@lgcns.com" }
]
requires-python = ">=3.13"
dependencies = [
    "elasticsearch>=9.2.1",
    "fastapi>=0.128.0",
    "fastmcp>=2.14.4",
    "httpx>=0.28.1",
    "json-repair>=0.55.1",
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint>=4.0.0",
    "motor>=3.7.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pgvector>=0.4.2",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "sqlalchemy>=2.0.46",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.40.0",
]

[project.scripts]
base-template = "base_template:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
